@@ -1,3 +1,9 @@
+2012-05-21  Dave Boutcher  <daveboutcher@gmail.com>
+	    Patrick Marlier  <patrick.marlier@gmail.com>
+
+	* trans-mem.c (ipa_tm_transform_clone): Transform functions with
+	indirect calls.
+
 2012-05-21  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline
